!625 修复一些问题

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -6,7 +6,7 @@ ock.mmc.meta_service_url = tcp://127.0.0.1:5000
 ock.mmc.log_level = info
 
 # TLS安全通信证书相关配置
-ock.mmc.tls.enable = false
+ock.mmc.tls.enable = true
 ock.mmc.tls.top.path = /opt/ock/security/
 ock.mmc.tls.ca.path = certs/ca.cert.pem
 ock.mmc.tls.ca.crl.path = certs/ca.crl.pem
