--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -20,7 +20,7 @@ ock.mmc.evict_threshold_high = 70
 ock.mmc.evict_threshold_low = 60
 
 # TLS安全通信证书相关配置
-ock.mmc.tls.enable = false
+ock.mmc.tls.enable = true
 ock.mmc.tls.top.path = /opt/ock/security/
 ock.mmc.tls.ca.path = certs/ca.cert.pem
 ock.mmc.tls.ca.crl.path = certs/ca.crl.pem
