!716 配置文件注释修改

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -1,11 +1,11 @@
-# meta service启动url
-# 在meta service非HA场景，请与mmc-meta.conf中的配置项保持一致
-# 在K8S集群meta service主备高可用场景，请配置为ClusterIP地址
+# Meta service start-up url
+# K8s meta service cluster master-standby high availability scenario: ClusterIP address
+# Non-HA scenario: keep consistent with the same name configuration in mmc-meta.conf
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
-# 日志级别
+# Log level: debug, info, warn, error
 ock.mmc.log_level = info
 
-# TLS安全通信证书相关配置
+# TLS secure communication certificate configuration
 ock.mmc.tls.enable = true
 ock.mmc.tls.top.path = /opt/ock/security/
 ock.mmc.tls.ca.path = certs/ca.cert.pem
@@ -15,25 +15,25 @@ ock.mmc.tls.key.path = certs/client.private.key.pem
 ock.mmc.tls.key.pass.path = certs/client.passphrase
 ock.mmc.tls.package.path = /opt/ock/security/libs/
 
-# client的总数
+# Total count of client
 ock.mmc.local_service.world_size = 1
-# BM服务启动url，在K8S集群meta service主备高可用场景，在Pod启动时自动修改为PodIP
+# BM service start-up url, it will automatically modified to PodIP at Pod startup in HA scenario
 ock.mmc.local_service.config_store_url = tcp://127.0.0.1:6000
-# ip需要设为RDAM网卡ip，可以使用show_gids命令查询
+# This ip needs to be set as RDMA network card ip, can use 'show_gids' command to query it
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
-# 数据传输协议，DRAM池使用roce，HBM池使用sdma
+# Data transfer protocol, DRAM pool: roce, HBM pool: sdma
 ock.mmc.local_service.protocol = roce
-# DRAM空间使用量，支持134217728、2048KB/2048K、200MB/200mb/200m、2.5GB或1TB样式配置，大小写不敏感
-# 系统自动计算对齐2MB，对齐2MB后，DRAM和HBM不能同时为0；最大值1TB
+# DRAM space usage, configuration type supports 134217728、2048KB/2048K、200MB/200mb/200m、2.5GB or 1TB, case-insensitive
+# The system automatically calculates and aligns to 2MB, both DRAM size and HBM size cannot be 0 at the same time after it, the maximum value is 1TB
 ock.mmc.local_service.dram.size = 128MB
-# HBM空间使用量，配置样式参考DRAM；
-# 系统自动计算对齐2MB，对齐2MB后，DRAM和HBM不能同时为0；最大值1TB
+# HBM space usage, configuration type is the same as DRAM
+# The system automatically calculates and aligns to 2MB, both DRAM size and HBM size cannot be 0 at the same time after it, the maximum value is 1TB
 ock.mmc.local_service.hbm.size = 0
-# 是否启用dram池host通路，需要HDK版本支持
+# Enable or disable host path for DRAM pool, requires support from HDK version
 ock.mmc.local_service.dram_by_sdma = false
 
-# client请求meta service连接不存在时，重试总时长（重试间隔为200ms）
-# 默认值为0，表示不重式失败时直接返回，取值范围[0, 600000]
+# The total retry duration (retry interval is 200ms) when client requests meta service and the connection does not exist
+# Default value is 0, means no-retry and return immediately, value range [0, 600000]
 ock.mmc.client.retry_milliseconds = 0
 
 ock.mmc.client.timeout.seconds = 60
