--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -1,25 +1,27 @@
-# meta service启动url，在K8S集群meta service主备高可用场景，在Pod启动时自动修改为PodIP
+# Meta service start-up url
+# It will automatically modified to PodIP at Pod startup in K8s meta service cluster master-standby high availability scenario
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
-# 是否使能主备高可用部署
+# Enable or disable high availability deployment
 ock.mmc.meta.ha.enable = false
-# 日志级别
+# Log level: debug, info, warn, error
 ock.mmc.log_level = info
-# 日志目录，可配置为绝对路径或相对路径，系统会自动追加logs目录
-# 默认配置下日志绝对路径为：/path/to/mmc_meta_service/../logs
-# 假设mmc_meta_service所在路径为/usr/local/mxc/memfabric_hybrid/latest/aarch64-linux/bin
-# 则日志路径为/usr/local/mxc/memfabric_hybrid/latest/aarch64-linux/logs
+# Log directory path, supports both relative and absolute paths, the system will automatically append 'logs' directory.
+# The absolute log path at default value is '/path/to/mmc_meta_service/../logs'
+# If the path of mmc_meta_service is '/usr/local/mxc/memfabric_hybrid/latest/aarch64-linux/bin'
+# Then the path of log is '/usr/local/mxc/memfabric_hybrid/latest/aarch64-linux/logs'
 ock.mmc.log_path = .
-# 日志文件大小单位MB[1,500]
+# Log rotation file size, unit is MB, value range [1,500]
 ock.mmc.log_rotation_file_size = 20
-# 日志文件个数[1,50]
+# Log rotation file count, value range [1,50]
 ock.mmc.log_rotation_file_count = 50
 
-# 触发淘汰的水位，单位为空间使用百分比，超过此水位后put操作触发淘汰
+# The threshold that triggers eviction, measured as a percentage of space usage
+# 'put' operation will trigger eviction when the threshold is exceeded
 ock.mmc.evict_threshold_high = 70
-# 淘汰的目标水位，单位为空间使用百分比
+# The target threshold of eviction, measured as a percentage of space usage
 ock.mmc.evict_threshold_low = 60
 
-# TLS安全通信证书相关配置
+# TLS secure communication certificate configuration
 ock.mmc.tls.enable = true
 ock.mmc.tls.top.path = /opt/ock/security/
 ock.mmc.tls.ca.path = certs/ca.cert.pem
