--- a/src/memcache/csrc/CMakeLists.txt
+++ b/src/memcache/csrc/CMakeLists.txt
@@ -17,6 +17,8 @@ include_directories(
         ${PROJECT_MMC_SRC_BASE}/csrc/proto
         ${PROJECT_MMC_SRC_BASE}/csrc/under_api/mf_smem
         ${PROJECT_SMEM_SRC_BASE}/include/host
+        ${PROJECT_SMEM_SRC_BASE}/csrc/common
+        ${PROJECT_SMEM_SRC_BASE}/csrc/config_store
         ${PROJECT_UTIL_SRC_BASE}
         ${PROJECT_UTIL_SRC_BASE}/ptracer/include
         ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/include/
