--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -1,6 +1,8 @@
 # Meta service start-up url
 # It will automatically modified to PodIP at Pod startup in K8s meta service cluster master-standby high availability scenario
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
+# meta service集成config store, 在K8S集群meta service主备高可用场景，在Pod启动时自动修改为PodIP
+ock.mmc.meta_service.config_store_url = tcp://127.0.0.1:6000
 # Enable or disable high availability deployment
 ock.mmc.meta.ha.enable = false
 # Log level: debug, info, warn, error
