--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(util/csrc/ptracer)
+add_subdirectory(smem/csrc/config_store)
 add_subdirectory(smem/csrc)
 add_subdirectory(hybm/csrc)
 add_subdirectory(memcache/csrc)
