--- a/src/smem/csrc/CMakeLists.txt
+++ b/src/smem/csrc/CMakeLists.txt
@@ -13,13 +13,11 @@ include_directories(
 set(SMEM_SRC_COMMON "")
 set(SMEM_SRC_NET "")
 set(SMEM_SRC_SMEM_SHM "")
-set(SMEM_SRC_STORE "")
 set(SMEM_SRC_CORE_API "")
 set(SMEM_SRC_SMEM_BM "")
 
 ## add files into src variables
 aux_source_directory(common SMEM_SRC_COMMON)
-aux_source_directory(config_store SMEM_SRC_STORE)
 aux_source_directory(net/ SMEM_SRC_NET)
 aux_source_directory(smem_shm SMEM_SRC_SMEM_SHARE)
 aux_source_directory(smem_bm SMEM_SRC_SMEM_BM)
@@ -28,7 +26,6 @@ aux_source_directory(smem_bm SMEM_SRC_SMEM_BM)
 set(PLATFORM_SRC ${SMEM_SRC_COMMON}
         ${SMEM_SRC_NET}
         ${SMEM_SRC_SMEM_SHARE}
-        ${SMEM_SRC_STORE}
         ${SMEM_SRC_SMEM_BM}
         smem.cpp)
 
@@ -38,12 +35,12 @@ add_library(smem_objects OBJECT ${PLATFORM_SRC})
 target_link_libraries(smem_objects PUBLIC smem)
 target_compile_options(smem_objects PRIVATE -fPIC)
 
-add_library(smem_static STATIC $<TARGET_OBJECTS:smem_objects>)
+add_library(smem_static STATIC $<TARGET_OBJECTS:smem_objects> $<TARGET_OBJECTS:config_store_object>)
 set_target_properties(smem_static PROPERTIES OUTPUT_NAME "mf_smem")
 target_link_directories(smem_static PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib)
 target_link_libraries(smem_static PUBLIC pthread libacc_tcp_net.a hybmm_static)
 
-add_library(smem_shared SHARED $<TARGET_OBJECTS:smem_objects>)
+add_library(smem_shared SHARED $<TARGET_OBJECTS:smem_objects> $<TARGET_OBJECTS:config_store_object>)
 set_target_properties(smem_shared PROPERTIES OUTPUT_NAME "mf_smem")
 target_link_directories(smem_shared PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib)
 target_link_libraries(smem_shared PUBLIC pthread libacc_tcp_net.a hybmm_shared)
