!784 config store support TLS

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -5,7 +5,7 @@ ock.mmc.meta_service_url = tcp://127.0.0.1:5000
 # Log level: debug, info, warn, error
 ock.mmc.log_level = info
 
-# TLS secure communication certificate configuration
+# TLS configurations for metaservice
 ock.mmc.tls.enable = true
 ock.mmc.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
 ock.mmc.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
@@ -19,6 +19,15 @@ ock.mmc.tls.decrypter.path =
 ock.mmc.local_service.world_size = 1
 # BM service start-up url, it will automatically modified to PodIP at Pod startup in HA scenario
 ock.mmc.local_service.config_store_url = tcp://127.0.0.1:6000
+# TLS configurations for config_store
+ock.mmc.config_store.tls.enable = true
+ock.mmc.config_store.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
+ock.mmc.config_store.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
+ock.mmc.config_store.tls.cert.path = /opt/ock/security/certs/client.cert.pem
+ock.mmc.config_store.tls.key.path = /opt/ock/security/certs/client.private.key.pem
+ock.mmc.config_store.tls.key.pass.path = /opt/ock/security/certs/client.passphrase
+ock.mmc.config_store.tls.package.path = /opt/ock/security/libs/
+ock.mmc.config_store.tls.decrypter.path =
 # Data transfer protocol, DRAM pool: roce, HBM pool: sdma
 ock.mmc.local_service.protocol = roce
 # DRAM space usage, configuration type supports 134217728、2048KB/2048K、200MB/200mb/200m、2.5GB or 1TB, case-insensitive
