--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -23,7 +23,7 @@ ock.mmc.evict_threshold_high = 70
 # The target threshold of eviction, measured as a percentage of space usage
 ock.mmc.evict_threshold_low = 60
 
-# TLS secure communication certificate configuration
+# TLS configuration for metaservice
 ock.mmc.tls.enable = true
 ock.mmc.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
 ock.mmc.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
@@ -32,3 +32,13 @@ ock.mmc.tls.key.path = /opt/ock/security/certs/server.private.key.pem
 ock.mmc.tls.key.pass.path = /opt/ock/security/certs/server.passphrase
 ock.mmc.tls.package.path = /opt/ock/security/libs/
 ock.mmc.tls.decrypter.path =
+
+# TLS configuration for config store
+ock.mmc.config_store.tls.enable = true
+ock.mmc.config_store.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
+ock.mmc.config_store.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
+ock.mmc.config_store.tls.cert.path = /opt/ock/security/certs/server.cert.pem
+ock.mmc.config_store.tls.key.path = /opt/ock/security/certs/server.private.key.pem
+ock.mmc.config_store.tls.key.pass.path = /opt/ock/security/certs/server.passphrase
+ock.mmc.config_store.tls.package.path = /opt/ock/security/libs/
+ock.mmc.config_store.tls.decrypter.path =
