--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -128,4 +128,5 @@ add_subdirectory(testcase/memcache/csrc/local_service)
 add_subdirectory(testcase/memcache/csrc/common)
 add_subdirectory(testcase/memcache/csrc/config)
 add_subdirectory(testcase/memcache/csrc/entities)
+add_subdirectory(testcase/memcache/csrc/log)
 add_subdirectory(testcase/memcache/csrc/)
