--- a/test/k8s_deploy/local-pods-demo.yaml
+++ b/test/k8s_deploy/local-pods-demo.yaml
@@ -26,6 +26,13 @@ spec:
       terminationGracePeriodSeconds: 10
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
+      topologySpreadConstraints:
+        - maxSkew: 1
+          topologyKey: kubernetes.io/hostname
+          whenUnsatisfiable: DoNotSchedule
+          labelSelector:
+            matchLabels:
+              app: local-service
       containers:
         - name: local-service
           image: 127.0.0.1:5000/memcache:jchv1
