--- a/test/k8s_deploy/meta-pods-demo.yaml
+++ b/test/k8s_deploy/meta-pods-demo.yaml
@@ -21,6 +21,13 @@ spec:
       terminationGracePeriodSeconds: 10
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
+      topologySpreadConstraints:
+        - maxSkew: 1
+          topologyKey: kubernetes.io/hostname
+          whenUnsatisfiable: DoNotSchedule
+          labelSelector:
+            matchLabels:
+              app: meta-service
       containers:
         - name: meta-service
           image: 127.0.0.1:5000/memcache:jchv1
