--- a/test/k8s_deploy/local-pods-demo.yaml
+++ b/test/k8s_deploy/local-pods-demo.yaml
@@ -35,7 +35,7 @@ spec:
               app: local-service
       containers:
         - name: local-service
-          image: 127.0.0.1:5000/memcache:jchv1
+          image: 127.0.0.1:5000/memcache:1028
           resources:
             requests:
               memory: "2Gi"
@@ -48,13 +48,11 @@ spec:
           args:
             - |
               source /usr/local/Ascend/ascend-toolkit/set_env.sh && \
-              bash /home/xxxxxxxx/mxc-memfabric_hybrid-1.0.0_linux_aarch64.run && \
+              bash /home/meta/mxc-memfabric_hybrid-1.0.0_linux_aarch64.run && \
               echo "install end." && \
               echo "App start." && \
               sleep infinity
           env:
-            - name: LD_LIBRARY_PATH  # 追加lib库：python3.11 lib， libhcom.so lib
-              value: "/usr/local/python3.11/lib:/home/meta/lib:$(LD_LIBRARY_PATH)"
             - name: MMC_LOCAL_CONFIG_PATH
               value: /home/meta/config/mmc-local.conf
           securityContext:
@@ -99,7 +97,7 @@ spec:
               mountPath: /dev/hisi_hdc
       initContainers:
         - name: change-pod-ip
-          image: 127.0.0.1:5000/memcache:jchv1
+          image: 127.0.0.1:5000/memcache:1028
           command: [ "/bin/sh", "-c"]
           args:
             - |
