--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -29,15 +29,16 @@ ock.mmc.config_store.tls.key.path = /opt/ock/security/certs/client.private.key.p
 ock.mmc.config_store.tls.key.pass.path = /opt/ock/security/certs/client.passphrase
 ock.mmc.config_store.tls.package.path = /opt/ock/security/libs/
 ock.mmc.config_store.tls.decrypter.path =
+
 # Data transfer protocol, 'host_rdma': rdma over host; 'host_tcp': tcp over host; 'device_rdma': rdma over device; 'device_sdma': sdma over device
 ock.mmc.local_service.protocol = host_rdma
-# DRAM space usage, configuration type supports 134217728, 2048KB/2048K, 200MB/200mb/200m, 2.5GB or 1TB, case-insensitive
-# The system automatically calculates and aligns to 2MB (host_sdma or host_tcp) or 1GB (device_sdma or device_rdma), both DRAM size and HBM size cannot be 0 at the same time after it, the maximum value is 1TB
+# HBM/DRAM space usage, configuration type supports 134217728, 2048KB/2048K, 200MB/200mb/200m, 2.5GB or 1TB, case-insensitive, the maximum value is 1TB
+# The system automatically calculates and aligns downwards to 2MB (host_sdma or host_tcp) or 1GB (device_sdma or device_rdma)
+# After alignment, the HBM size and DRAM size cannot both be 0 at the same time
 ock.mmc.local_service.dram.size = 128MB
-# HBM space usage, configuration type is the same as DRAM
-# The system automatically calculates and aligns to 2MB (host_sdma or host_tcp) or 1GB (device_sdma or device_rdma), both DRAM size and HBM size cannot be 0 at the same time after it, the maximum value is 1TB
 ock.mmc.local_service.hbm.size = 0
-# This ip needs to be set as RDMA network card ip, can use 'show_gids' command to query it, only for host rdma
+
+# If the protocol is host_rdma, the ip needs to be set as RDMA network card ip. Use 'show_gids' command to query it
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
 # HCOM TLS config
 ock.mmc.local_service.hcom.tls.enable = true
