!1068 host_rdma协议支持over ubc

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -39,6 +39,7 @@ ock.mmc.local_service.dram.size = 128MB
 ock.mmc.local_service.hbm.size = 0
 
 # If the protocol is host_rdma, the ip needs to be set as RDMA network card ip. Use 'show_gids' command to query it
+# If the protocol is host_rdma, and over obmm, example: ubc://4245:4944:0000:0000:0000:0000:0200:0000
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
 # HCOM TLS config
 ock.mmc.local_service.hcom.tls.enable = true
