去掉代码中所有的mxc

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(log)
 
 set(_ACTUAL_BUILD_TESTS ${BUILD_TESTS})
 set(BUILD_TESTS OFF)
+set(BUILD_FROM_MEMCACHE ON)
 add_subdirectory(memfabric_hybrid)
 set(BUILD_TESTS ${_ACTUAL_BUILD_TESTS})
