--- a/src/memcache/csrc/CMakeLists.txt
+++ b/src/memcache/csrc/CMakeLists.txt
@@ -23,8 +23,6 @@ include_directories(
         ${PROJECT_SMEM_SRC_BASE}/csrc/config_store
         ${PROJECT_UTIL_SRC_BASE}/ptracer/include
         ${PROJECT_ACCLINKS_SRC_BASE}/include
-        ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/include/
-        ${PROJECT_SOURCE_DIR}/3rdparty/log/spdlog/include/
 )
 
 if (BUILD_TESTS STREQUAL "ON")
@@ -90,8 +88,7 @@ target_compile_options(mmc_objects PRIVATE -fPIC -Wno-float-equal)
 add_library(mmc_static STATIC $<TARGET_OBJECTS:mmc_objects>)
 set_target_properties(mmc_static PROPERTIES OUTPUT_NAME "mf_memcache")
 target_link_libraries(mmc_static PUBLIC pthread acc_tcp_net_static)
-target_link_directories(mmc_static PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib)
-target_link_directories(mmc_static PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib64)
+target_link_directories(mmc_static PUBLIC ${HYBRID_OUT}/3rdparty/spdlog/lib)
 if(BUILD_PYTHON STREQUAL "ON")
     target_link_libraries(mmc_static PRIVATE pybind11::module Python3::Python)
 endif()
@@ -105,8 +102,7 @@ endif ()
 add_library(mmc_shared SHARED $<TARGET_OBJECTS:mmc_objects>)
 set_target_properties(mmc_shared PROPERTIES OUTPUT_NAME "mf_memcache")
 target_link_libraries(mmc_shared PUBLIC smem_shared pthread acc_tcp_net_static)
-target_link_directories(mmc_shared PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib)
-target_link_directories(mmc_shared PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib64)
+target_link_directories(mmc_shared PUBLIC ${HYBRID_OUT}/3rdparty/spdlog/lib)
 if (x${CMAKE_BUILD_TYPE} STREQUAL "xDEBUG")
     target_link_libraries(mmc_shared PUBLIC pthread libspdlogd.a)
 else (
