!1122 spdlog迁移至mmc三方库

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,4 +1,9 @@
 ####################################################################
+# Spdlog
+####################################################################
+add_subdirectory(log)
+
+####################################################################
 # MemFabric_Hybrid
 ####################################################################
 
