--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -56,7 +56,7 @@ FUNCTION(ADD_UNIT_TEST TEST_NAME)
     set(TEST_TARGET_NAME ${TEST_NAME})
     add_executable(${TEST_TARGET_NAME} ${ADD_UNIT_TEST_FILES} $<TARGET_OBJECTS:ptracer_object> $<TARGET_OBJECTS:config_store_object>)
     target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_OUTPUT_PATH}/acc_links/lib64/)
-    target_link_directories(${TEST_TARGET_NAME} PUBLIC ${HYBRID_OUT}/3rdparty/spdlog/lib)
+    target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib/)
     target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${GTEST_BUILD_LIB_DIR}/lib)
     target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_OUTPUT_PATH}/memcache/lib64)
     target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_OUTPUT_PATH}/smem/lib64)
