--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = 3rdparty/memfabric_hybrid
 	url = https://gitee.com/ascend/memfabric_hybrid.git
 	branch = br_opensource_memfabric
+[submodule "3rdparty/log/spdlog"]
+	path = 3rdparty/log/spdlog
+	url = https://github.com/gabime/spdlog.git
+	branch = tags/v1.15.3
