--- a/.gitmodules
+++ b/.gitmodules
@@ -8,8 +8,8 @@
 	branch = tags/v2.7
 [submodule "3rdparty/memfabric_hybrid"]
 	path = 3rdparty/memfabric_hybrid
-	url = https://gitee.com/ascend/memfabric_hybrid.git
-	branch = br_opensource_memfabric
+	url = https://gitcode.com/Ascend/memfabric_hybrid.git
+	branch = master
 [submodule "3rdparty/log/spdlog"]
 	path = 3rdparty/log/spdlog
 	url = https://github.com/gabime/spdlog.git
