--- a/test/k8s_deploy/local-pods-demo.yaml
+++ b/test/k8s_deploy/local-pods-demo.yaml
@@ -49,6 +49,7 @@ spec:
             - |
               source /usr/local/Ascend/ascend-toolkit/set_env.sh && \
               bash /home/meta/memfabric_hybrid-1.0.0_linux_aarch64.run && \
+              bash /home/meta/memcache_hybrid-1.0.0_linux_aarch64.run && \
               echo "install end." && \
               echo "App start." && \
               sleep infinity
