pie链接选项仅对可执行文件生效
Co-authored-by: hansanyue<hansanyue@h-partners.com>



# message auto-generated for no-merge-commit merge:
!45 merge dev_1 into develop

pie链接选项仅对可执行文件生效

Created-by: han-sanyue
Commit-by: hansanyue
Merged-by: yrewzjsx
Description: .

See merge request: Ascend/memcache!45

--- a/src/memcache/csrc/daemon/CMakeLists.txt
+++ b/src/memcache/csrc/daemon/CMakeLists.txt
@@ -14,6 +14,8 @@ add_executable(mmc_meta_service ${DAEMON_SRCS} $<TARGET_OBJECTS:ptracer_object> 
 
 target_compile_options(mmc_meta_service PRIVATE -fPIC -Wno-float-equal)
 
+target_link_options(mmc_meta_service PRIVATE -pie)
+
 target_link_libraries(mmc_meta_service PUBLIC mmc_shared pthread acc_tcp_net_static)
 
 if(BUILD_PYTHON STREQUAL "ON")
