--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -30,7 +30,8 @@ ock.mmc.config_store.tls.key.pass.path = /opt/ock/security/certs/client.passphra
 ock.mmc.config_store.tls.package.path = /opt/ock/security/libs/
 ock.mmc.config_store.tls.decrypter.path =
 
-# Data transfer protocol, 'host_rdma': rdma over host; 'host_tcp': tcp over host; 'device_rdma': rdma over device; 'device_sdma': sdma over device
+# Data transfer protocol, 'host_rdma': rdma over host;'host_urma': rdma over host_ub; 'host_tcp': tcp over host; 'device_rdma': rdma over device; 'device_sdma': sdma over device
+# host_urma need hcom: https://atomgit.com/openeuler/ubs-comm
 ock.mmc.local_service.protocol = host_rdma
 # HBM/DRAM space usage, configuration type supports 134217728, 2048KB/2048K, 200MB/200mb/200m, 2.5GB or 1TB, case-insensitive, the maximum value is 1TB
 # The system automatically calculates and aligns downwards to 2MB (host_sdma or host_tcp) or 1GB (device_sdma or device_rdma)
@@ -39,7 +40,6 @@ ock.mmc.local_service.dram.size = 128MB
 ock.mmc.local_service.hbm.size = 0
 
 # If the protocol is host_rdma, the ip needs to be set as RDMA network card ip. Use 'show_gids' command to query it
-# If the protocol is host_rdma, and over obmm, example: ubc://4245:4944:0000:0000:0000:0000:0200:0000
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
 # HCOM TLS config
 ock.mmc.local_service.hcom.tls.enable = true
@@ -58,4 +58,5 @@ ock.mmc.client.timeout.seconds = 60
 
 # read/write thread pool size, value range [1, 64]
 ock.mmc.client.read_thread_pool.size = 32
+ock.mmc.client.aggregate.io = false
 ock.mmc.client.write_thread_pool.size = 4
