fix: configuration items have no default values
Co-authored-by: shilinlee_com<836160610@qq.com>



# message auto-generated for no-merge-commit merge:
!60 merge default_params into develop

fix: configuration items have no default values

Created-by: shilinlee_com
Commit-by: shilinlee_com
Merged-by: chenyz6
Description: # Pull Request Template

## Description

<!-- Provide a clear summary of the change, the problem it solves, and the technical approach. -->

1. meta config:

- [x] **NO REQUIED** config items.

2. local config:

- [x] **ONLY** 3 config items **REQUIED** now：
    - `ock.mmc.local_service.protocol`
    - `ock.mmc.local_service.dram.size`
    - `ock.mmc.local_service.hbm.size`
![image.png](https://raw.gitcode.com/user-images/assets/7672915/dba74afc-c9c8-425a-8081-cb16a278d2db/image.png 'image.png')


## Related Issues

<!-- Replace with actual issue numbers. Example: Closes #123, Related to #456 -->

## Type of Change

- [x] Bug fix
- [ ] New feature
- [ ] Performance optimization
- [ ] Documentation update
- [ ] Other (please describe):_______________

## Testing

<!-- Describe how the changes were tested. Include:
- Unit/integration test coverage
- Manual validation steps
- Links to CI reports (e.g., CIDA) if available
- Note any pending tests
-->

1. DO NOT specify env MMC_META_CONFIG_PATH
 ```
➜  memcache git:(default_params) ✗ mmc_meta_service                                                               
[WARNING] MMC_META_CONFIG_PATH is not set. All configuration items use default values,
Meta service log level 1, log path: /usr/local/memcache_hybrid/1.0.0/aarch64-linux/./logs/mmc-meta.log, audit log path: /usr/local/memcache_hybrid/1.0.0/aarch64-linux/./logs/mmc-meta-audit.log, log rotation file size: 20971520, log rotation file count: 50

 ```
 
 2. local: Just keep the three required config items and then init the store

## Checklist

- [x] I have performed a self-review of my own code.  
- [x] I have updated the documentation.  
- [ ] I have 

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -6,7 +6,7 @@ ock.mmc.meta_service_url = tcp://127.0.0.1:5000
 ock.mmc.log_level = info
 
 # TLS configurations for metaservice
-ock.mmc.tls.enable = true
+ock.mmc.tls.enable = false
 ock.mmc.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
 ock.mmc.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
 ock.mmc.tls.cert.path = /opt/ock/security/certs/client.cert.pem
@@ -21,7 +21,7 @@ ock.mmc.local_service.world_size = 16
 # keep consistent with the same name configuration in mmc-meta.conf
 ock.mmc.local_service.config_store_url = tcp://127.0.0.1:6000
 # TLS configurations for config_store
-ock.mmc.config_store.tls.enable = true
+ock.mmc.config_store.tls.enable = false
 ock.mmc.config_store.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
 ock.mmc.config_store.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
 ock.mmc.config_store.tls.cert.path = /opt/ock/security/certs/client.cert.pem
@@ -42,7 +42,7 @@ ock.mmc.local_service.hbm.size = 0
 # If the protocol is host_rdma, the ip needs to be set as RDMA network card ip. Use 'show_gids' command to query it
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
 # HCOM TLS config
-ock.mmc.local_service.hcom.tls.enable = true
+ock.mmc.local_service.hcom.tls.enable = false
 ock.mmc.local_service.hcom.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
 ock.mmc.local_service.hcom.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
 ock.mmc.local_service.hcom.tls.cert.path = /opt/ock/security/certs/client.cert.pem
