--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -26,7 +26,7 @@ ock.mmc.evict_threshold_high = 70
 ock.mmc.evict_threshold_low = 60
 
 # TLS configuration for metaservice
-ock.mmc.tls.enable = true
+ock.mmc.tls.enable = false
 ock.mmc.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
 ock.mmc.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
 ock.mmc.tls.cert.path = /opt/ock/security/certs/server.cert.pem
@@ -36,7 +36,7 @@ ock.mmc.tls.package.path = /opt/ock/security/libs/
 ock.mmc.tls.decrypter.path =
 
 # TLS configuration for config store
-ock.mmc.config_store.tls.enable = true
+ock.mmc.config_store.tls.enable = false
 ock.mmc.config_store.tls.ca.path = /opt/ock/security/certs/ca.cert.pem
 ock.mmc.config_store.tls.ca.crl.path = /opt/ock/security/certs/ca.crl.pem
 ock.mmc.config_store.tls.cert.path = /opt/ock/security/certs/server.cert.pem
