Reduce build and packaging time by 33%
Co-authored-by: j00808874<jiangchanghong3@huawei.com>



# message auto-generated for no-merge-commit merge:
!57 merge mr into develop

Reduce build and packaging time by 33%

Created-by: j00808874
Commit-by: j00808874
Merged-by: yrewzjsx
Description: # Pull Request Template

## Description

Reduce build and packaging time by 33%

## Related Issues

<!-- Replace with actual issue numbers. Example: Closes #123, Related to #456 -->

## Type of Change

- [ ] Bug fix
- [ ] New feature
- [ ] Performance optimization
- [ ] Documentation update
- [ ] Other (please describe):_______________

## Testing
![image.png](https://raw.gitcode.com/user-images/assets/7672915/70ed9e59-aca0-453f-8031-83bb79b5e358/image.png 'image.png')

![image.png](https://raw.gitcode.com/user-images/assets/7672915/ace0de46-5068-4224-b5c4-583489f06fa6/image.png 'image.png')

## Checklist

- [ ] I have performed a self-review of my own code.  
- [ ] I have updated the documentation.  
- [ ] I have added tests to prove my changes are effective.

See merge request: Ascend/memcache!57

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,13 @@ message(STATUS "BUILD_PYTHON = ${BUILD_PYTHON}")
 message(STATUS "ENABLE_PTRACER = ${ENABLE_PTRACER}")
 message(STATUS "CMAKE_COMPILER = ${CMAKE_COMPILER}")
 message(STATUS "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
-
+find_program(NINJA_EXE NAMES ninja)
+if(NINJA_EXE)
+    set(MAKE_CMD ninja)
+else()
+    set(MAKE_CMD make)
+endif()
+message(STATUS "MAKE_CMD = ${MAKE_CMD}")
 add_compile_options(-Wunused-variable -Wunused-value -Wcast-align)
 add_compile_options(-fpermissive -Wno-error)
 add_compile_options(-Wcast-qual -Winvalid-pch -Wwrite-strings -Wsign-compare -Wfloat-equal -Wextra -Wno-deprecated-declarations)
