日志、文档、关联子仓等问题修复
Co-authored-by: hansanyue<hansanyue@h-partners.com>



# message auto-generated for no-merge-commit merge:
!73 merge v1.0.0_fix into v1.0.0

日志、文档、关联子仓等问题修复

Created-by: han-sanyue
Commit-by: hansanyue
Merged-by: yrewzjsx
Description: # Pull Request Template

## Description

修复文档错误
修复INFO级别日志打印过多
子仓编译依赖改为memfabric v1.0.0分支
更新子仓commit id

## Related Issues

修复前，拉取memcache v1.0.0分支，按文档指导拉取三方库，由于memfabric版本错误导致编译失败

## Type of Change

- [x] Bug fix
- [ ] New feature
- [ ] Performance optimization
- [x] Documentation update
- [ ] Other (please describe):_______________

## Testing

修复后，克隆仓库后按文档拉取三方库，直接编译无问题。使用的是memfabric v1.0.0最新commit

## Checklist

- [x] I have performed a self-review of my own code.  
- [x] I have updated the documentation.  
- [ ] I have added tests to prove my changes are effective.

See merge request: Ascend/memcache!73

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 [submodule "3rdparty/memfabric_hybrid"]
 	path = 3rdparty/memfabric_hybrid
 	url = https://gitcode.com/Ascend/memfabric_hybrid.git
-	branch = master
+	branch = v1.0.0
 [submodule "3rdparty/log/spdlog"]
 	path = 3rdparty/log/spdlog
 	url = https://github.com/gabime/spdlog.git
