feat: support config different DRAM or HBM size in multi-process
Co-authored-by: shilinlee_com<836160610@qq.com>



# message auto-generated for no-merge-commit merge:
!88 merge bm_create2_adaptor into develop

feat: support config different DRAM or HBM size in multi-process

Created-by: shilinlee_com
Commit-by: shilinlee_com
Merged-by: chenyz6
Description: # Pull Request Template

## Description

1. support config **different DRAM OR HBM** size in multi-process. 
 
   A new hybrid case is added:

      > different DRAM size and HBM size

       - Process A: DRAM 10GB + HBM 0
       - Process B: DRAM 20GB + HBM 2GB
 
 2. add 2 new configs
     ```
     ock.mmc.local_service.max.dram.size = 64GB
     ock.mmc.local_service.max.hbm.size = 0
     ```

## Related Issues

<!-- Replace with actual issue numbers. Example: Closes #123, Related to #456 -->

## Type of Change

- [ ] Bug fix
- [x] New feature
- [ ] Performance optimization
- [x] Documentation update
- [ ] Other (please describe):_______________

## Testing

<!-- Describe how the changes were tested. Include:
- Unit/integration test coverage
- Manual validation steps
- Links to CI reports (e.g., CIDA) if available
- Note any pending tests
-->

Manual validation case:
case 1 : 
       - Process A: DRAM 10GB + HBM 0，read/write: ✅
       - Process B: DRAM 20GB + HBM 0，read/write: ✅

case 2 :
	- Process A: DRAM 0 + HBM 0，write: ❌（config params verification）
	- Process B: DRAM 20GB + HBM 0， read: ❌，related issue:  [#6](https://gitcode.com/Ascend/memcache/issues/6) 

case 3 : 
       - Process A: DRAM 10GB + HBM 0GB，read/write: ✅
       - Process B: DRAM 20GB + HBM 2GB，read/write: ✅


## Checklist

- [x] I have performed a self-review of my own code.  
- [x] I have updated the documentation.  
- [ ] I have added tests to prove my changes are effective.

See merge request: Ascend/memcache!88

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /build/
 /script/git_last_commit.txt
 package/*
+/src/memcache/python/memcache_hybrid/VERSION
+.clion.source.upload.marker
+__pycache__
 
 *.so
 *.whl
