--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -37,7 +37,11 @@ ock.mmc.local_service.protocol = host_rdma
 # The system automatically calculates and aligns downwards to 2MB (host_sdma or host_tcp) or 1GB (device_sdma or device_rdma)
 # After alignment, the HBM size and DRAM size cannot both be 0 at the same time
 ock.mmc.local_service.dram.size = 128MB
+# The MAX size of `ock.mmc.local_service.dram.size` in all local processes
+ock.mmc.local_service.max.dram.size = 64GB
 ock.mmc.local_service.hbm.size = 0
+# The MAX size of `ock.mmc.local_service.hbm.size` in all local processes
+ock.mmc.local_service.max.hbm.size = 0
 
 # If the protocol is host_rdma, the ip needs to be set as RDMA network card ip. Use 'show_gids' command to query it
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
