日志默认路径修改
Co-authored-by: wonder1121<wangdan@huawei.com>



# message auto-generated for no-merge-commit merge:
!118 merge develop_log_path into develop

日志默认路径修改

Created-by: wonder1121
Commit-by: wonder1121
Merged-by: liu1103xwxw
Description: # Pull Request Template

## Description

<!-- Provide a clear summary of the change, the problem it solves, and the technical approach. -->

## Related Issues

<!-- Replace with actual issue numbers. Example: Closes #123, Related to #456 -->

## Type of Change

- [ ] Bug fix
- [ ] New feature
- [ ] Performance optimization
- [ ] Documentation update
- [ ] Other (please describe):_______________

## Testing

<!-- Describe how the changes were tested. Include:
- Unit/integration test coverage
- Manual validation steps
- Links to CI reports (e.g., CIDA) if available
- Note any pending tests
-->

## Checklist

- [ ] I have performed a self-review of my own code.  
- [ ] I have updated the documentation.  
- [ ] I have added tests to prove my changes are effective.

See merge request: Ascend/memcache!118

--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -10,10 +10,9 @@ ock.mmc.meta.ha.enable = false
 # Log level: debug, info, warn, error
 ock.mmc.log_level = info
 # Log directory path, supports both relative and absolute paths, the system will automatically append 'logs' directory.
-# The absolute log path at default value is '/path/to/mmc_meta_service/../logs'
-# If the path of mmc_meta_service is '/usr/local/memcache_hybrid/latest/aarch64-linux/bin'
-# Then the path of log is '/usr/local/memcache_hybrid/latest/aarch64-linux/logs'
-ock.mmc.log_path = .
+# The absolute log path at default value is '/var/log/memcache_hybrid/logs'
+# If the specified path is not exist, It will be automatically created
+ock.mmc.log_path = /var/log/memcache_hybrid
 # Log rotation file size, unit is MB, value range [1,500]
 ock.mmc.log_rotation_file_size = 20
 # Log rotation file count, value range [1,50]
