【性能】支持聚合个数调参
Co-authored-by: yrewzjsx<zhangjinshi2@huawei.com>



# message auto-generated for no-merge-commit merge:
!120 merge develop into develop

【性能】支持聚合个数调参

Created-by: yrewzjsx
Commit-by: yrewzjsx
Merged-by: chenyz6
Description: # Pull Request Template

## Description

<!-- Provide a clear summary of the change, the problem it solves, and the technical approach. -->

## Related Issues

<!-- Replace with actual issue numbers. Example: Closes #123, Related to #456 -->

## Type of Change

- [ ] Bug fix
- [ ] New feature
- [ ] Performance optimization
- [ ] Documentation update
- [ ] Other (please describe):_______________

## Testing

<!-- Describe how the changes were tested. Include:
- Unit/integration test coverage
- Manual validation steps
- Links to CI reports (e.g., CIDA) if available
- Note any pending tests
-->

## Checklist

- [ ] I have performed a self-review of my own code.  
- [ ] I have updated the documentation.  
- [ ] I have added tests to prove my changes are effective.

See merge request: Ascend/memcache!120

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -62,5 +62,7 @@ ock.mmc.client.timeout.seconds = 60
 
 # read/write thread pool size, value range [1, 64]
 ock.mmc.client.read_thread_pool.size = 32
-ock.mmc.client.aggregate.io = false
 ock.mmc.client.write_thread_pool.size = 4
+# read/write aggregate, num range [1, 131072]
+ock.mmc.client.aggregate.io = true
+ock.mmc.client.aggregate.num = 122
