解决批量部分失败不准确的问题&重构批量读写
Co-authored-by: yrewzjsx<zhangjinshi2@huawei.com>



# message auto-generated for no-merge-commit merge:
!130 merge develop into develop

解决批量部分失败不准确的问题&重构批量读写

Created-by: yrewzjsx
Commit-by: yrewzjsx
Merged-by: chenyz6
Description: # Pull Request Template

## Description

<!-- Provide a clear summary of the change, the problem it solves, and the technical approach. -->

## Related Issues

<!-- Replace with actual issue numbers. Example: Closes #123, Related to #456 -->

## Type of Change

- [ ] Bug fix
- [ ] New feature
- [ ] Performance optimization
- [ ] Documentation update
- [ ] Other (please describe):_______________

## Testing

<!-- Describe how the changes were tested. Include:
- Unit/integration test coverage
- Manual validation steps
- Links to CI reports (e.g., CIDA) if available
- Note any pending tests
-->

## Checklist

- [ ] I have performed a self-review of my own code.  
- [ ] I have updated the documentation.  
- [ ] I have added tests to prove my changes are effective.

See merge request: Ascend/memcache!130

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,6 +210,8 @@ set(HYBRID_SRC ${PROJECT_SOURCE_DIR}/3rdparty/memfabric_hybrid/src)
 file(GLOB_RECURSE ALL_HEADERS
         "${HYBRID_SRC}/*.h"
 )
+list(FILTER ALL_HEADERS EXCLUDE REGEX "${HYBRID_SRC}/hybm/csrc/driver/npu_direct_rdma/.*")
+
 set(INCLUDE_DIRS "")
 foreach (header ${ALL_HEADERS})
     get_filename_component(HEADER_DIR ${header} PATH)
